feat: user authentication
New functionality:
- user profile photo
- comment message by post
- new image download servlet
- error page